--- a/shallow_tensorflow_answer2.ipynb
+++ b/shallow_tensorflow_answer2.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "dBPAw-TA8qiE",
-        "outputId": "4d75317e-c3e2-41bc-a625-f63049b18c08",
+        "outputId": "44c03617-9d2e-47fa-fb0a-21d8ba0fa35f",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -102,9 +102,9 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-c54002b8-9dc0-4ecd-9abd-bd9c945339d5\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-3ee24ed3-1686-42f0-84e0-bf64f72dafde\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-c54002b8-9dc0-4ecd-9abd-bd9c945339d5\">\n",
+              "     <output id=\"result-3ee24ed3-1686-42f0-84e0-bf64f72dafde\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -121,7 +121,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving sonar.csv to sonar (16).csv\n"
+            "Saving sonar.csv to sonar.csv\n"
           ],
           "name": "stdout"
         }
@@ -157,31 +157,37 @@
         "### Preprocessing the data\n",
         "\n",
         "We need to perform several operations on the data before we use it. \n",
-        "1. The data is sorted: all mines then all rocks so we shuffle it using numpy\n",
+        "1. The data is sorted: all mines followed by all rocks so we shuffle it using numpy\n",
         "2. We need to break it into train and test sets.\n",
-        "3. Make sure that the data in \"float32\" type instead of \"float\". Forsome reason  Tensorflow is sensitive about that "
+        "3. Make sure that the data in \"float32\" type instead of \"float\". For some reason  Tensorflow is sensitive about that "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0aLmCxiQMfbB",
-        "outputId": "6e0f07de-d726-42b0-cae5-2b6e0afc292b",
+        "outputId": "be942bd7-da43-44b1-bd72-8baf61e8c9ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
+        "#pandas data frame\n",
         "m=df.values\n",
+        "# randomize (shuffle) the data\n",
         "np.random.shuffle(m)\n",
+        "# Each row has 61 entries, 60 for data and the last one is the label \"M\" or \"R\"\n",
+        "# X contains all the data\n",
         "X=m[:,0:60].astype(\"float32\")\n",
+        "# Y contains all the labels\n",
         "Y=m[:,60]\n",
+        "# convert the labels: \"M\"->1 and \"R\"->0\n",
         "Y=np.array([1.0 if i=='M' else 0.0 for i in Y])\n",
         "Y=Y.reshape((len(Y),1))\n",
         "Y=Y.astype(\"float32\")\n",
-        "print(type(Y[0,0]))\n",
         "\n",
+        "# split the data and labels into a training and test sets\n",
         "x_train=X[0:175]\n",
         "x_test=X[175:208]\n",
         "y_train=Y[0:175]\n",
@@ -228,9 +234,7 @@
         "nb_iterations = 2500\n",
         "\n",
         "# Network Parameters\n",
-        "#n_h = 4 # number of neurons in hidden layer\n",
         "n_h = 64 # number of neurons in hidden layer\n",
-        "\n",
         "n_x = X.shape[1] #number of neurons in input\n",
         "n_y = Y.shape[1] #number of neurons in ouput\n"
       ],
@@ -244,17 +248,18 @@
       },
       "source": [
         "### Initialization\n",
-        "\n",
-        "Since tensorflow stacks the data row-wise the forward propagation is slightly different then we are used to.\n",
-        "Let $W^1$,$W^2$,$b^1$,$b^2$ be the weights and biases of the first and second layer respectively then forward propagation is define as\n",
+        "The forward propagation phase is the same as when we did this exercise from first principles but since tensorflow stacks the data row-wise the forward propagation is slightly different then we are used to.\n",
+        "Let $W^0$,$W^1$,$b^0$,$b^1$ be the weights and biases of the first and second layer respectively then forward propagation is given by\n",
         "\\begin{align*}\n",
-        "Z^1&=X\\cdot W^1+b^1\\\\\n",
+        "Z^1&=X\\cdot W^0+b^0\\\\\n",
         "A^1 &=\\sigma(Z^1)\\\\\n",
-        "Z^2 &=A^1\\cdot W^2+b2\\\\\n",
+        "Z^2 &=A^1\\cdot W^1+b^1\\\\\n",
         "A^2 &=\\sigma(Z^2)\n",
         "\\end{align*}\n",
-        "Accorging to the above equations you have to define the tensorflow variables that will hold the weights and biases. \n",
-        "The biases are set to zero  and the weights randomly."
+        "Compare the above with the equations in the previous exercise. For more details consult the lecture [backpropagation](https://github.com/hikmatfarhat-ndu/CSC645/blob/master/lectures/csc645-lecture-backprop.pdf).\n",
+        "\n",
+        "According to the above equations we have to define the tensorflow variables that will hold the weights and biases. \n",
+        "The biases are initialized to zero  and the weights randomly."
       ]
     },
     {
@@ -267,11 +272,11 @@
         "\n",
         "initializer = tf.initializers.RandomNormal()\n",
         "\n",
-        "W1=tf.Variable(initializer([n_x,n_h]),trainable=True,dtype=tf.float32)\n",
-        "W2=tf.Variable(initializer([n_h,n_y]),trainable=True,dtype=tf.float32)\n",
+        "W0=tf.Variable(initializer([n_x,n_h]),trainable=True,dtype=tf.float32)\n",
+        "W1=tf.Variable(initializer([n_h,n_y]),trainable=True,dtype=tf.float32)\n",
         "\n",
-        "b1=tf.Variable(tf.zeros([n_h]))            #biases of the first layer\n",
-        "b2=tf.Variable(tf.zeros([n_y]))            #biases of the second layer\n"
+        "b0=tf.Variable(tf.zeros([n_h]))            #biases of the first layer\n",
+        "b1=tf.Variable(tf.zeros([n_y]))            #biases of the second layer\n"
       ],
       "execution_count": 6,
       "outputs": []
@@ -295,9 +300,9 @@
         "def model(input):\n",
         "    # Hidden fully connected layer with 256 neurons\n",
         "   \n",
-        "    layer_1 = tf.add(tf.matmul(input, W1), b1)\n",
+        "    layer_1 = tf.add(tf.matmul(input, W0), b0)\n",
         "    # Output fully connected layer with a neuron for each class\n",
-        "    out_layer = tf.matmul(tf.sigmoid(layer_1), W2) + b2\n",
+        "    out_layer = tf.matmul(tf.sigmoid(layer_1), W1) + b1\n",
         "    return out_layer"
       ],
       "execution_count": 7,
@@ -331,10 +336,75 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "tVCoEjl0wdL2"
+      },
+      "source": [
+        "## Prediction\n",
+        "\n",
+        "Given input X ( and the parameters we are trying to learn) this function predicts if it is Rock or Mine"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8e8CLkg1utUA"
+      },
+      "source": [
+        "def prediction(X):\n",
+        "  a=tf.math.sigmoid(model(X))\n",
+        "  return tf.cast((a>0.5),tf.int32)"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "krm_O8dYxC2o"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "cyKqGz848pdQ"
       },
       "source": [
-        "The model is defined now we run our computation."
+        "The model is defined now we run our computation. Recal that our model depends on, the changing, parameters $W^0,W^1,b^0,b^1$ therefore its gradient will change also. The train function is a **single** training step"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XF6wPb6nuM8J"
+      },
+      "source": [
+        "optimizer=tf.optimizers.SGD(learning_rate)\n",
+        "\n",
+        "def train(data,labels):\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    diff=loss(model(data),labels)\n",
+        "\n",
+        "  grad=tape.gradient(diff,[W0,W1,b0,b1])\n",
+        "  optimizer.apply_gradients( zip( grad , [W0,W1,b0,b1] ) )\n",
+        "  pT=tf.transpose(prediction(data))\n",
+        "  correct=np.squeeze(np.dot(pT,labels)+np.dot(1-pT,1-labels))\n",
+        "  return diff,correct"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fSK1D5tOuTmY"
+      },
+      "source": [
+        "### Training Loop"
       ]
     },
     {
@@ -342,68 +412,73 @@
       "metadata": {
         "id": "v3bNNi0M8pdS",
         "tags": [],
-        "outputId": "4522f683-7e28-40b7-e860-2da2b72e3a16",
+        "outputId": "83a53aa2-3bdc-4fb8-9e65-cfbd4d28aa4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
+          "height": 103
         }
       },
       "source": [
-        "# Initializing the variables\n",
-        "optimizer=tf.optimizers.SGD(learning_rate)\n",
-        "def prediction(X):\n",
-        "  a=tf.math.sigmoid(model(X))\n",
-        "  return tf.cast((a>0.5),tf.int32)\n",
-        "def train(data,labels):\n",
-        "  with tf.GradientTape() as tape:\n",
-        "    diff=loss(model(data),labels)\n",
-        "  grad=tape.gradient(diff,[W1,W2,b1,b2])\n",
-        "  optimizer.apply_gradients( zip( grad , [W1,W2,b1,b2] ) )\n",
-        "  pT=tf.transpose(prediction(data))\n",
-        "  correct=np.squeeze(np.dot(pT,labels)+np.dot(1-pT,1-labels))\n",
-        "  return diff,correct\n",
-        "\n",
         "for i in range(nb_iterations):\n",
         " cost,corr=train(x_train,y_train)\n",
         " if(i%500==0):\n",
         "  print(\"cost={},accuracy={}/{}\".format(cost,corr,x_train.shape[0]))\n",
-        "  \n",
-        " \n",
-        "\n",
-        "\n",
-        "pT=tf.transpose(prediction(x_test))\n",
-        "print(np.dot(pT,y_test))\n",
-        "print(np.dot(1-pT,1-y_test))\n",
-        "correct=np.dot(pT,y_test)+np.dot(1-pT,1-y_test)\n",
-        "accuracy=100*float(np.squeeze(correct))/float(y_test.shape[0])\n",
-        "print(\"Accuracy=\"+str(accuracy))\n"
+        "  \n"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "cost=0.06292533129453659,accuracy=173.0/175\n",
-            "cost=0.0241070743650198,accuracy=175.0/175\n",
-            "cost=0.009661934338510036,accuracy=175.0/175\n",
-            "[[16.]]\n",
-            "[[11.]]\n",
-            "Accuracy=84.375\n"
+            "cost=0.6938693523406982,accuracy=96.0/175\n",
+            "cost=0.2810496687889099,accuracy=147.0/175\n",
+            "cost=0.13114233314990997,accuracy=167.0/175\n",
+            "cost=0.04477405920624733,accuracy=173.0/175\n",
+            "cost=0.032321758568286896,accuracy=175.0/175\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "amjTFhXd8pdh"
+        "id": "9rPC3U5juYS1"
       },
       "source": [
-        ""
+        "### Accuracy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "amjTFhXd8pdh",
+        "outputId": "aaecd347-48d1-4343-a9f4-da70d88deb63",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        }
+      },
+      "source": [
+        "pT=tf.transpose(prediction(x_test))\n",
+        "print(np.dot(pT,y_test))\n",
+        "print(np.dot(1-pT,1-y_test))\n",
+        "correct=np.dot(pT,y_test)+np.dot(1-pT,1-y_test)\n",
+        "accuracy=100*float(np.squeeze(correct))/float(y_test.shape[0])\n",
+        "print(\"Accuracy=\"+str(accuracy))"
       ],
-      "execution_count": 9,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[13.]]\n",
+            "[[12.]]\n",
+            "Accuracy=78.125\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
