--- a/shallow-answer.ipynb
+++ b/shallow-answer.ipynb
@@ -61,7 +61,7 @@
         "#from google.colab import files\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "#file=files.upload()\n",
         "df=pd.read_csv(\"sonar.csv\")"
       ],
-      "execution_count": 2,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -111,7 +111,9 @@
         "id": "qdtWZ0JK0nEo"
       },
       "source": [
-        "## Preprocessing the data"
+        "## Preprocessing the data\n",
+        "\n",
+        "Before we start the learning process we need to preprocess the data. First, all the Mines \"M\" are grouped together and the Rocks \"R\" are grouped together. We use the numpy shuffle function to mix them randomly. Second, Pandas reads the data as pandas frame so we need to extract the data values and the label values. Third, we convert the labels from \"M\" to 1 and from \"R\" to 0. Finally, we divide the data set into training and test subsets."
       ]
     },
     {
@@ -130,31 +132,32 @@
         "m=df.values\n",
         "# randomize (shuffle) the data\n",
         "np.random.shuffle(m)\n",
+        "m=m.T\n",
         "# Each row has 61 entries, 60 for data and the last one is the label \"M\" or \"R\"\n",
+        "\n",
         "# X contains all the data\n",
-        "X=m[:,0:60].astype(\"float32\")\n",
+        "X=m[0:60,:].astype(\"float32\")\n",
+        "\n",
         "# Y contains all the labels\n",
-        "Y=m[:,60]\n",
+        "\n",
+        "Y=m[60,:]\n",
         "# convert the labels: \"M\"->1 and \"R\"->0\n",
         "Y=np.array([1.0 if i=='M' else 0.0 for i in Y])\n",
-        "Y=Y.reshape((len(Y),1))\n",
+        "Y=Y.reshape((1,len(Y)))\n",
         "Y=Y.astype(\"float32\")\n",
         "\n",
         "# split the data and labels into a training and test sets\n",
-        "x_train=X[0:175]\n",
-        "x_test=X[175:208]\n",
-        "y_train=Y[0:175]\n",
-        "y_test=Y[175:208]\n",
-        "x_train=x_train.T\n",
-        "x_test=x_test.T\n",
-        "y_train=y_train.T \n",
-        "y_test=y_test.T\n",
+        "x_train=X[:,0:175]\n",
+        "x_test=X[:,175:208]\n",
+        "y_train=Y[:,0:175]\n",
+        "y_test=Y[:,175:208]\n",
+        "\n",
         "print(x_train.shape)\n",
         "print(x_test.shape)\n",
         "print(y_train.shape)\n",
         "print(y_test.shape)"
       ],
-      "execution_count": 3,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +188,7 @@
       "metadata": {
         "id": "-pZo-cdyAjFl"
       },
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -217,7 +220,7 @@
         "    s=1/(1+np.exp(-z))\n",
         "    return s"
       ],
-      "execution_count": 5,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -258,21 +261,21 @@
         "b0=np.zeros((n_h,1))\n",
         "W1=np.random.randn(n_y,n_h)\n",
         "b1=np.zeros((n_y,1))\n",
-        "dW0=0.001*W0\n",
-        "db0=b0\n",
-        "dW1=0.001*W1\n",
-        "db1=b1\n"
+        "#dW0=0.001*W0\n",
+        "#db0=b0\n",
+        "#dW1=0.001*W1\n",
+        "#db1=b1\n"
       ],
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def compute_cost(A2,Y):\n",
+        "def loss(A2,Y):\n",
         "    m=Y.shape[1]\n",
         "    logprob=Y*np.log(A2)+(1-Y)*np.log(1-A2)\n",
         "    cost=-np.sum(logprob)/m\n",
@@ -302,7 +305,7 @@
         "id": "k-OaRqQFAjGU"
       },
       "source": [
-        "def forward_propagation(X):\n",
+        "def model(X):\n",
         "    Z1=np.dot(W0,X)+b0\n",
         "    A1=sigmoid(Z1)\n",
         "    Z2=np.dot(W1,A1)+b1\n",
@@ -310,7 +313,7 @@
         "    \n",
         "    return A1,A2"
       ],
-      "execution_count": 8,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -347,13 +350,13 @@
       },
       "source": [
         "#def back_propagation(parameters,X,Y):\n",
-        "def back_propagation(X,Y):\n",
+        "def gradient(X,Y):\n",
         "    global dW0,db0,dW1,db1\n",
         "    #we will be dividing by the number of samples m\n",
         "    m=X.shape[1]\n",
         "    \n",
-        "    A1,A2=forward_propagation(X)\n",
-        "    cost=compute_cost(A2,Y)\n",
+        "    A1,A2=model(X)\n",
+        "    cost=loss(A2,Y)\n",
         "    \n",
         "    # the derivative of the sigmoid\n",
         "    gp=A1*(1-A1)\n",
@@ -366,12 +369,12 @@
         "    db0=np.sum(dZ1,axis=1,keepdims=True)/m\n",
         "    return cost\n"
       ],
-      "execution_count": 9,
+      "execution_count": 35,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 36,
       "metadata": {
         "tags": []
       },
@@ -379,14 +382,14 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "0.9936521405970324"
+            "text/plain": "0.7631966068072591"
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 36
         }
       ],
       "source": [
-        "back_propagation(x_train,y_train)"
+        "gradient(x_train,y_train)"
       ]
     },
     {
@@ -407,14 +410,14 @@
       "source": [
         "def apply_gradients(learning_rate):\n",
         "\n",
-        "    global W0,b0,W1,b1,dW0,db0,dW1,db1\n",
+        "    global W0,b0,W1,b1\n",
         "    W0=W0-learning_rate*dW0\n",
         "    b0=b0-learning_rate*db0\n",
         "    W1=W1-learning_rate*dW1\n",
         "    b1=b1-learning_rate*db1\n",
         "    "
       ],
-      "execution_count": 11,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -449,17 +452,17 @@
       },
       "source": [
         "for i in range(nb_iterations):\n",
-        "    cost=back_propagation(x_train,y_train)\n",
+        "    cost=gradient(x_train,y_train)\n",
         "    apply_gradients(learning_rate)\n",
         "    if i % 500 == 0:\n",
         "        print (\"Cost after iteration %i: %f\" %(i, cost))\n"
       ],
-      "execution_count": 12,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Cost after iteration 0: 0.993652\nCost after iteration 500: 0.077281\nCost after iteration 1000: 0.013531\nCost after iteration 1500: 0.006345\n"
+          "text": "Cost after iteration 0: 0.763197\nCost after iteration 500: 0.116275\nCost after iteration 1000: 0.013728\nCost after iteration 1500: 0.006381\n"
         }
       ]
     },
@@ -480,24 +483,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t7nTM1DjAjHf"
-      },
-      "source": [
-        "#def predict(parameters,X):\n",
-        "def predict(X):\n",
-        "    #A1,A2=forward_propagation(X,parameters)\n",
-        "    A1,A2=forward_propagation(X)\n",
-        "    #now compute the predictions from A2\n",
-        "    predictions=(A2>0.5)\n",
-        "    \n",
-        "    return predictions"
-      ],
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "tags": [],
         "id": "q8Na7ehlAjHq",
         "outputId": "5fffb3b6-1179-4b3c-e4c3-5835db0ab9fe",
@@ -507,19 +492,18 @@
         }
       },
       "source": [
-        "predictions=predict(x_test)\n",
-        "print(predictions.shape)\n",
-        "print(y_test.shape)\n",
+        "A1,A2=model(x_test)\n",
+        "predictions=(A2>0.5)\n",
         "correct=np.dot(y_test,predictions.T)+np.dot(1-y_test,1-predictions.T)\n",
         "accuracy=100*float(correct)/float(y_test.shape[1])\n",
         "print(\"Accuracy=\"+str(accuracy))"
       ],
-      "execution_count": 14,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "(1, 32)\n(1, 32)\nAccuracy=84.375\n"
+          "text": "Accuracy=90.625\n"
         }
       ]
     },
